[project]
authors = [{name = "eiselesr", email = "eiselesr@gmail.com"}]
dependencies = []
name = "interface.mqtt"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
interface_mqtt = { path = ".", editable = true }

[tool.pixi.tasks]
install-nodered = "npm install -g node-red"
start = "node-red"

[tool.pixi.dependencies]
paho-mqtt = ">=2.1.0,<3"
nodejs = ">=24.4.1,<24.5"
mosquitto = ">=2.0.15,<3"
